--- a/gamewithai/src/index.css
+++ b/gamewithai/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #22395d;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 code {
