--- a/gamewithai/src/App.css
+++ b/gamewithai/src/App.css
@@ -1,3 +1,38 @@
 .App {
   text-align: center;
 }
+
+.main {
+  display:flex;
+  --s: 94px;  /* size  */
+  --m: 1px;    /* margin */
+  --f: calc(1.732 * var(--s) + 4 * var(--m)  - 1px);
+}
+
+.container {
+  font-size: 0; /*disable white space between inline block element */
+}
+
+.container button {
+  width: var(--s);
+  margin: var(--m);
+  height: calc(var(--s)*1.1547); 
+  display: inline-block;
+  font-size:initial;
+  clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
+  background: red;
+  margin-bottom: calc(var(--m) - var(--s)*0.2885); 
+}
+.container button:nth-child(odd) {
+  background:green;
+}
+.container::before {
+  content: "";
+  width: calc(var(--s)/2 + var(--m));
+  float: left;
+  height: 100%;
+  shape-outside: repeating-linear-gradient(     
+                   #0000 0 calc(var(--f) - 3px),      
+                   #000  0 var(--f));
+}
+
